--- a/views/tetris.ejs
+++ b/views/tetris.ejs
@@ -12,7 +12,7 @@
     <canvas id="can2"></canvas>
 
     <audio autoplay loop id="audio">
-    <source src="../bgm/videoplayback.mp4">
+    <source src="/bgm/videoplayback.mp4">
     </audio>
     <script>
         //効果音
