--- a/views/top.ejs
+++ b/views/top.ejs
@@ -18,7 +18,7 @@
         <button type="button">
             <a href="../views/config.ejs">設定</a>
         </button>
-        <form action="http://localhost:8000/post" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="https://tetris-application.herokuapp.com/post" method="post" enctype="application/x-www-form-urlencoded">
             <label for="name">id  </label>
             <input type="number" name="id"></input><br>
             <label for="name">name</label>
