--- a/views/top.ejs
+++ b/views/top.ejs
@@ -32,7 +32,7 @@
                 <ul>
                     <p>tetris</p>
                     <p>swap所属</p>
-                    <p>su大学</p>
+                    <p>s.univ</p>
                     <p><%=data[0].name%></p>
                 </ul>
             </li>
