--- a/views/top.ejs
+++ b/views/top.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,11 +15,11 @@
         <div class="action-wrapper">
             <div class="btn-wrapper">
                 <button type="button" onclick="location.href='/tetris'">Game Start</button>
-                <button type="button" onclick="location.href='./views/config.ejs'">Option</button>
+                <button type="button" onclick="location.href='/ranking'">Ranking</button>
             </div>
             <form action="http://localhost:8000/post" method="post" enctype="application/x-www-form-urlencoded">
-                <label for="name" class="label">id  </label>
-                <input type="number" name="id" class="input"></input><br>
+                <label for="name" class="label">score</label>
+                <input type="number" name="score" class="input"></input><br>
                 <label for="name" class="label">name</label>
                 <input type="text" name="name" class="input"></input>
                 <button type="submit">Send</button>
@@ -33,7 +33,8 @@
                     <p>tetris</p>
                     <p>swap所属</p>
                     <p>s.univ</p>
-                    <p><%=data[0].name%></p>
+                    <%let number = Math.floor(Math.random()*3)%>
+                    <p><%=data[number].name%></p>
                 </ul>
             </li>
         </div>
