--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ranking.css">
+    <link rel="stylesheet" href="/css/ranking.css">
     <title>Tetris Ranking</title>
 </head>
 <body>
-    <h1>Tetris Ranking</h1>
+    <h1>Tetris Ranking TOP10!</h1>
     <table>
         <tbody>
             <tr>
@@ -17,24 +17,54 @@
                 <td>スコア</td>
             </tr>
              <tr>
-                <th>見出し</th>
-                <td>テキストが入ります</td>
-                <td>テキストが入ります</td>
+                <th>1位</th>
+                <td> <%=data[0].name%> </td>
+                <td> <%=data[0].score%> </td>
             </tr>
              <tr>
-                <th>見出し</th>
-                <td>テキストが入ります</td>
-                <td>テキストが入ります</td>
+                <th>2位</th>
+                <td> <%=data[1].name%> </td>
+                <td> <%=data[1].score%> </td>
             </tr>
             <tr>
-                <th>見出し</th>
-                <td>テキストが入ります</td>
-                <td>テキストが入ります</td>
+                <th>3位</th>
+                <td><%=data[2].name%></td>
+                <td><%=data[2].score%></td>
             </tr>
             <tr>
-                <th>見出し</th>
-                <td>テキストが入ります</td>
-                <td>テキストが入ります</td>
+                <th>4位</th>
+                <td><%=data[2].name%></td>
+                <td><%=data[2].score%></td>
+            </tr>
+            <tr>
+                <th>5位</th>
+                <td><%=data[4].name%></td>
+                <td><%=data[4].score%></td>
+            </tr>
+            <tr>
+                <th>6位</th>
+                <td><%=data[5].name%></td>
+                <td><%=data[5].score%></td>
+            </tr>
+            <tr>
+                <th>7位</th>
+                <td><%=data[6].name%></td>
+                <td><%=data[6].score%></td>
+            </tr>
+            <tr>
+                <th>9位</th>
+                <td><%=data[7].name%></td>
+                <td><%=data[7].score%></td>
+            </tr>
+            <tr>
+                <th>9位</th>
+                <td><%=data[8].name%></td>
+                <td><%=data[8].score%></td>
+            </tr>
+            <tr>
+                <th>10位</th>
+                <td><%=data[9].name%></td>
+                <td><%=data[9].score%></td>
             </tr>
         </tbody>
     </table>
