--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -8,65 +8,69 @@
     <title>Tetris Ranking</title>
 </head>
 <body>
-    <h1>Tetris Ranking TOP10!</h1>
-    <table>
-        <tbody>
-            <tr>
-                <th>順位</th>
-                <td>名前</td>
-                <td>スコア</td>
-            </tr>
-             <tr>
-                <th>1位</th>
-                <td> <%=data[0].name%> </td>
-                <td> <%=data[0].score%> </td>
-            </tr>
-             <tr>
-                <th>2位</th>
-                <td> <%=data[1].name%> </td>
-                <td> <%=data[1].score%> </td>
-            </tr>
-            <tr>
-                <th>3位</th>
-                <td><%=data[2].name%></td>
-                <td><%=data[2].score%></td>
-            </tr>
-            <tr>
-                <th>4位</th>
-                <td><%=data[2].name%></td>
-                <td><%=data[2].score%></td>
-            </tr>
-            <tr>
-                <th>5位</th>
-                <td><%=data[4].name%></td>
-                <td><%=data[4].score%></td>
-            </tr>
-            <tr>
-                <th>6位</th>
-                <td><%=data[5].name%></td>
-                <td><%=data[5].score%></td>
-            </tr>
-            <tr>
-                <th>7位</th>
-                <td><%=data[6].name%></td>
-                <td><%=data[6].score%></td>
-            </tr>
-            <tr>
-                <th>9位</th>
-                <td><%=data[7].name%></td>
-                <td><%=data[7].score%></td>
-            </tr>
-            <tr>
-                <th>9位</th>
-                <td><%=data[8].name%></td>
-                <td><%=data[8].score%></td>
-            </tr>
-            <tr>
-                <th>10位</th>
-                <td><%=data[9].name%></td>
-                <td><%=data[9].score%></td>
-            </tr>
-        </tbody>
-    </table>
+    <div>
+
+        <h1>Tetris Ranking TOP10!</h1>
+        <table>
+            <tbody>
+                <tr>
+                    <th>順位</th>
+                    <td>名前</td>
+                    <td>スコア</td>
+                </tr>
+                 <tr>
+                    <th>1位</th>
+                    <td> <%=data[0].name%> </td>
+                    <td> <%=data[0].score%> </td>
+                </tr>
+                 <tr>
+                    <th>2位</th>
+                    <td> <%=data[1].name%> </td>
+                    <td> <%=data[1].score%> </td>
+                </tr>
+                <tr>
+                    <th>3位</th>
+                    <td><%=data[2].name%></td>
+                    <td><%=data[2].score%></td>
+                </tr>
+                <tr>
+                    <th>4位</th>
+                    <td><%=data[2].name%></td>
+                    <td><%=data[2].score%></td>
+                </tr>
+                <tr>
+                    <th>5位</th>
+                    <td><%=data[4].name%></td>
+                    <td><%=data[4].score%></td>
+                </tr>
+                <tr>
+                    <th>6位</th>
+                    <td><%=data[5].name%></td>
+                    <td><%=data[5].score%></td>
+                </tr>
+                <tr>
+                    <th>7位</th>
+                    <td><%=data[6].name%></td>
+                    <td><%=data[6].score%></td>
+                </tr>
+                <tr>
+                    <th>9位</th>
+                    <td><%=data[7].name%></td>
+                    <td><%=data[7].score%></td>
+                </tr>
+                <tr>
+                    <th>9位</th>
+                    <td><%=data[8].name%></td>
+                    <td><%=data[8].score%></td>
+                </tr>
+                <tr>
+                    <th>10位</th>
+                    <td><%=data[9].name%></td>
+                    <td><%=data[9].score%></td>
+                </tr>
+            </tbody>
+        </table>
+        <a href="http://localhost:8000/">スタート画面に戻る</a>
+    </div>
 </body>
 </html>
