--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,18 @@ body{
     padding: 0;
 }
 
+main{
+    background-image: url(/image/ranking背景.jpg);
+    background-size: cover;
+    height: 65vh;
+}
+
 header{
     background: linear-gradient(to right, rgb(29, 28, 34), rgb(67, 64, 95));
     font-size: 50px;
     color: white;
     width: 100%;
-    height: 100px;
+    height: 15vh;
     text-align: center;
     padding-top: 20px;
     text-shadow: 3px 3px 10px white;
@@ -68,15 +74,29 @@ button{
     width: 80%;
 }
 
+button:active{
+    width: 100%;
+    display: block;
+    position: relative;
+    text-align: center;
+    padding: 5px;
+    margin: 10px 0 10px 0;
+    font-size: 15px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 5%;
+    font: italic;
+    text-shadow: 1px 1px 1px rgb(121, 121, 121);
+    left: 11%;
+    right: 11%;
+    width: 80%;
+}
+
 form{
     width: 100%;
 }
 
-.input{
-    display: block;
-    text-align: right;
-    width: 100%;
-}
+
 
 .label{
     display: block;
@@ -90,7 +110,7 @@ footer{
     font-style: italic;
     color: white;
     width: 100%;
-    height: 100px;
+    height: 20vh;
 }
 
 footer ul{
