--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,13 +16,12 @@ header{
     width: 100%;
     height: 15vh;
     text-align: center;
-    padding-top: 20px;
     text-shadow: 3px 3px 10px white;
 }
 
 .title{
     left: calc(50% - 2em);
-    padding-top: 15px;
+    padding-top:3.6vh;
 }
 
 form{
@@ -44,8 +43,8 @@ form{
     margin-bottom: 70px;
     position: relative;
     width: 30vw;
-    left: 35vw;
-    right: 35vw;
+    right: 30vw;
+    
     /* max-width: 515px; */
 }
 
