--- a/views/top.ejs
+++ b/views/top.ejs
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tetris</title>
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        .action-wrapper{
+            display: inline-flex;
+            align-items: start; /* ADD */
+            flex-direction: column;
+            text-decoration: none;
+            background-color: #848bec;
+            color: #FFFFFF;
+            border-radius: 32px;
+            box-shadow: 10px 10px 10px #00000029;
+            font-size: 16px;
+            padding: 15px 30px;
+            margin-top: 100px;
+            margin-bottom: 70px;
+            position: relative;
+            width: 30vw;
+            left: 32.5vw;
+            right: 30vw;
+        }
+    </style>
 </head>
 <body>
     <header>
