--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -70,7 +70,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="http://localhost:8000/">スタート画面に戻る</a>
+        <a href="/">スタート画面に戻る</a>
     </div>
 </body>
 </html>
