--- a/views/tetris.ejs
+++ b/views/tetris.ejs
@@ -776,8 +776,8 @@
             </div>
         </div>
         <div id="form">
-            <a href="http://localhost:8000/">Quit</a>
-            <form action="http://localhost:8000/post" method="post" enctype="application/x-www-form-urlencoded">
+            <a href="/">Quit</a>
+            <form action="/post" method="post" enctype="application/x-www-form-urlencoded">
                 <p id="name" type="hidden">
                     <label for="name">Your Name</label>
                     <input type="text" value="" name="name">
