--- a/views/tetris.ejs
+++ b/views/tetris.ejs
@@ -648,7 +648,7 @@
                     // sound3.play();
                     break;　　
             case 'w':
-            case 'x':       
+            case 'ArrowUp':       
                     while( checkMove(0,1) ) {tetri_y++;}
                     // sound3.play();
                     break;
