--- a/views/top.ejs
+++ b/views/top.ejs
@@ -60,14 +60,12 @@
     </main>
     <footer>
         <div>
-            <li>
-                <ul>
-                    <p>tetris</p>
-                    <p>swap所属</p>
-                    <p>s.univ</p>
-                    <p>T.H</p>
-                </ul>
-            </li>
+            <ul>
+                <li>tetris</li>
+                <li>s.univ</li>
+                <li>所属：swap</li>
+                <li>T.H</li>
+            </ul>
         </div>
     </footer>
 </body>
