--- a/views/top.ejs
+++ b/views/top.ejs
@@ -65,6 +65,7 @@
                 <li>s.univ</li>
                 <li>所属：swap</li>
                 <li>T.H</li>
+                <li>※バグたまにあり。その時はリロード。BGM付いてるけど、初めたての時は少し重くて流れないかも。BGM有りがいい人はGameStart後何回かリロード。</li>
             </ul>
         </div>
     </footer>
