--- a/views/top.ejs
+++ b/views/top.ejs
@@ -65,7 +65,9 @@
                 <li>s.univ</li>
                 <li>所属：swap</li>
                 <li>T.H</li>
-                <li>※バグたまにあり。その時はリロード。BGM付いてるけど、初めたての時は少し重くて流れないかも。BGM有りがいい人はGameStart後何回かリロード。</li>
+                <li>※1　バグたまにあり。その時はリロード。BGM付いてるけど、初めたての時は少し重くて流れないかも。BGM有りがいい人はGameStart後何回かリロード。</li>
+                <li>※2　ノートpcフルスクリーン推奨。スマホ未対応。</li>
+                <li>※3　Tspinは出来ない仕様。</li>
             </ul>
         </div>
     </footer>
